--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,45 +5,49 @@ name: CI
 on:
   push:
     branches:
-        - dev
-        - v*
+      - dev
+      - v*
 
 jobs:
-    docker-build:
-        runs-on: self-hosted
+  docker-build:
+    runs-on: self-hosted
 
-        steps:
-         - uses: actions/checkout@v1
-           with:
-             submodules: true
-         - name: Build Dockerfile
-           run: |
-            ./docker/build.sh -t ${GITHUB_REF##*/} --no-cache
-    
-    unit-tests:
-        runs-on: self-hosted
-        needs: docker-build
-        
-        steps:
-         - name: Run Unit Tests
-           run: |
-            ./docker/run.sh -t ${GITHUB_REF##*/} --unittest
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
+      - name: Build Dockerfile
+        run: |
+          docker container prune -f
+          ./docker/build.sh -t ${GITHUB_REF##*/} --no-cache
 
-    integration-tests:
-       runs-on: self-hosted
-       needs: docker-build
-        
-       steps:
-        - name: Run Integration Tests
-          run: |
-           ./docker/run.sh -v /home/${USER}/ML_models:/home/${USER}/plant-3d-vision/tests/testdata/models/models -t ${GITHUB_REF##*/} --integration_test
+  unit-tests:
+    runs-on: self-hosted
+    needs: docker-build
 
-    docker-clean:
-       runs-on: self-hosted
-       needs: [integration-tests, unit-tests]
-       if: always()
+    steps:
+      - name: Run Unit Tests
+        run: |
+          docker container prune -f
+          ./docker/run.sh -t ${GITHUB_REF##*/} --unittest
 
-       steps:
-        - name: Remove Docker Image
-          run: |
-            docker image rm plant3dvision:${GITHUB_REF##*/}
+  integration-tests:
+    runs-on: self-hosted
+    needs: docker-build
+
+    steps:
+      - name: Run Integration Tests
+        run: |
+          docker container prune -f
+          ./docker/run.sh -v /home/${USER}/ML_models:/home/${USER}/plant-3d-vision/tests/testdata/models/models -t ${GITHUB_REF##*/} --integration_test
+
+  docker-clean:
+    runs-on: self-hosted
+    needs: [ integration-tests, unit-tests ]
+    if: always()
+
+    steps:
+      - name: Remove Docker Image
+        run: |
+          docker image rm roboticsmicrofarms/plant-3d-vision:${GITHUB_REF##*/}
+          docker container prune -f
