--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Run Integration Tests
         run: |
-          ./docker/run.sh -v /home/${USER}/ML_models:/home/${USER}/plant-3d-vision/tests/testdata/models/models -t ${{ github.sha }} --integration_test
+          ./docker/run.sh -t ${{ github.sha }} --integration_test
 
   docker-clean:
     runs-on: self-hosted
