Fix Dockerfile & run.sh scripts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -58,9 +58,9 @@ FROM base AS final
 
 # Copy the venv from the builder:
 COPY --from=builder --chown=${USER_NAME} /venv /venv
-COPY --chown=${USER_NAME} ./get_model.sh ./plant-3d-vision/get_model.sh
-COPY --chown=${USER_NAME} ./tests ./plant-3d-vision/tests
+COPY --chown=${USER_NAME} ./get_model.sh ./get_model.sh
+COPY --chown=${USER_NAME} ./tests ./tests
 # Download a model file:
-RUN ./plant-3d-vision/get_model.sh
+RUN ./get_model.sh
 
 CMD ["./docker-entrypoint.sh"]
