--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ romitask = { git = "https://github.com/romi/romitask.git", rev = "a641767e" }
 plantdb = { git = "https://github.com/romi/plantdb.git", rev = "b51e4955" }
 romiseg = { git = "https://github.com/romi/romiseg.git", rev = "ef3e0942" }
 romicgal = { git = "https://github.com/romi/romicgal.git", rev = "0fd72b25" }
-dtw = {git = "https://github.com/romi/dtw.git", rev = "refacto2"}
+dtw = {git = "https://github.com/romi/dtw.git", rev = "develop"}
 
 [tool.poetry.dev-dependencies]
 Sphinx = "^4.4.0"
