--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,4 +45,4 @@ jobs:
         run: |
           docker image rm roboticsmicrofarms/plant-3d-vision:${{ github.sha }} --force
           docker container prune -f
-          docker image prune --filter label=stage=builder
+          docker image prune --filter label=stage=builder -f
