Add a tool to visualise Colmap poses

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 robustness_comparison = "plant3dvision.bin.robustness_comparison:run"
 npz_volume_viewer = "plant3dvision.bin.npz_volume_viewer:run"
+colmap_poses = "plant3dvision.bin.colmap_poses:run"
