--- a/config/virtual_cylinder.toml
+++ b/config/virtual_cylinder.toml
@@ -1,5 +1,6 @@
 [CylinderRadiusGroundTruth]
 radius="random"
+height="random"
 
 [CylinderRadiusEvaluation]
 upstream_task="CylinderRadiusGroundTruth"
