--- a/config/intrisic_calibration.toml
+++ b/config/intrisic_calibration.toml
@@ -1,3 +1,7 @@
+[IntrinsicCalibrationScan]
+n_poses = "20"  # Number of acquisition of the printed ChArUco board
+offset = "5"
+
 [CreateCharucoBoard]
 n_squares_x = "14"  # Number of chessboard squares in X direction.
 n_squares_y = "10"  # Number of chessboard squares in Y direction.
@@ -8,8 +12,9 @@ aruco_pattern = "DICT_4X4_1000"  # 'DICT_4X4_50', 'DICT_4X4_100', 'DICT_4X4_250'
 [DetectCharuco]
 upstream_task = "ImagesFilesetExists"
 board_fileset = "CreateCharucoBoard"
-min_n_squares = "20"
+min_n_corners = "20"  # Minimum number of detected corners to export them
 
 [IntrinsicCalibration]
 upstream_task = "DetectCharuco"
 board_fileset = "CreateCharucoBoard"
+camera_model = "OPENCV"  # defines the estimated parameters
