--- a/config/geom_pipe_real.toml
+++ b/config/geom_pipe_real.toml
@@ -4,21 +4,18 @@ matcher = "exhaustive"
 compute_dense = false
 align_pcd = true
 calibration_scan_id = ""
-
-  [Colmap.cli_args.feature_extractor]
-  "--ImageReader.single_camera" = "1" # in colmap default to 0
-  "--SiftExtraction.use_gpu" = "1"
-
-  [Colmap.cli_args.exhaustive_matcher]
-  "--SiftMatching.use_gpu" = "1"
-
-  [Colmap.cli_args.model_aligner]
-  "--robust_alignment_max_error" = "10"
-
-  # [Colmap.bounding_box] # default to None
-  # x = [150, 650]
-  # y = [150, 650]
-  # z = [-90, 300]
+[Colmap.cli_args.feature_extractor]
+"--ImageReader.single_camera" = "1"  # defaults to `0` in COLMAP
+"--SiftExtraction.use_gpu" = "1"
+"--ImageReader.camera_model" = "SIMPLE_RADIAL"
+[Colmap.cli_args.exhaustive_matcher]
+"--SiftMatching.use_gpu" = "1"
+[Colmap.cli_args.model_aligner]
+"--robust_alignment_max_error" = "10"
+# [Colmap.bounding_box]  # default to None
+# x = [150, 650]
+# y = [150, 650]
+# z = [-90, 300]
 
 [Undistorted]
 upstream_task = "ImagesFilesetExists"
